Fix for issue #252
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2192 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.properties
+++ b/sip-servlets-bootstrap/release/build.properties
@@ -1,4 +1,4 @@
-mss.release.version=0.4
+mss.release.version=0.5
 #proxy.use=off
 #base-tomcat.loc=http://archive.apache.org/dist/tomcat
 
@@ -11,3 +11,7 @@ tomcat-path=${base.path}/apache-tomcat-${tomcat.version}.zip
 jboss.version=4.2.2.GA
 jboss-path=${base.path}/jboss-${jboss.version}.zip
 #jboss-release.loc=http://surfnet.dl.sourceforge.net/sourceforge/jboss/jboss-${jboss.version}.zip
+
+# ----- GWT release -----
+gwt.version=1.4.62
+gwt-path=${base.path}/gwt-linux-${gwt.version}.tar.gz
