--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -29,11 +29,12 @@
 			<artifactId>jslee-sips-interop-demo-slee-custom-events</artifactId>
 			<version>1.0</version>
 		</dependency>
-		<dependency>
+		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1-CP1</version>
-		</dependency>			
+			<artifactId>mobicents-media-server-constants</artifactId>
+			<version>1.0.0.BETA2</version>
+			<scope>provided</scope>
+		</dependency>		
 		<dependency>				
 			<groupId>org.mobicents.resources</groupId>
 			<artifactId>media-ratype</artifactId>
