Issue 126 : UPDATE Extension added + Test case
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2257 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -33,6 +33,7 @@
 		<module>chatroom-sip-servlet</module>
 		<module>handler-sip-servlet</module>
 		<module>dispatcher-sip-servlet</module>				
+		<module>update-sip-servlet</module>
 	</modules>
 	<dependencies>
 		<!-- test dependencies -->
