--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/refer-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/refer-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/publish-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/publish-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/update-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/update-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/dispatcher-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/dispatcher-sip-servlet/src/main/java"/>
