Move Stun4J to the maven repository
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2313 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -65,9 +65,8 @@
 		<dependency>
 			<groupId>net.java.stun4j</groupId>
 			<artifactId>stun4j</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/Stun4J.jar</systemPath>
+			<version>1.0.MOBICENTS</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Tomcat dependencies -->
