--- a/sip-servlets-test-suite/applications/refer-sip-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/refer-sip-servlet/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
 		<version>0.5-SNAPSHOT</version>
 	</parent>
-	<artifactId>notifier-sip-servlet</artifactId>
+	<artifactId>refer-sip-servlet</artifactId>
 	<packaging>war</packaging>
 	<name>Notifier Sip Servlet Example</name>
 	<build>
