pom changes so that mvn clean install -P release -Dmaven.test.skip=true builds everything including examples and testsuite
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2359 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>mobicents</artifactId>
-		<groupId>org.mobicents</groupId>
-		<version>2-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<groupId>org.mobicents.servlet.sip.example</groupId>
+		<artifactId>sip-servlets-examples-parent</artifactId>
+		<version>1.0</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>media-playback-servlet</artifactId>
@@ -154,29 +154,5 @@
 
 		</plugins>
 	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>jboss-snapshots</id>
-			<name>JBoss Snapshot Repository</name>
-			<url>http://snapshots.jboss.org/maven2</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+	
 </project>
