--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>2-SNAPSHOT</version>
+        <version>3-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
-	<packaging>pom</packaging>
 	<version>0.5-SNAPSHOT</version>
+	<packaging>pom</packaging>	
 	<name>Mobicents Sip Servlets</name>
 	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<ciManagement>
@@ -171,6 +171,13 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>			
+			<id>release</id>
+			<modules>
+				<module>../sip-servlets-examples</module>
+				<module>../sip-servlets-test-suite</module>
+			</modules>
 		</profile>
 	</profiles>
 	<!-- repositories -->
