--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -125,8 +125,14 @@
 			<groupId>jboss</groupId>
 			<artifactId>jbosssx</artifactId>
 			<version>${jboss.version}</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/jbosssx.jar</systemPath>
+			<scope>runtime</scope>
+		</dependency>
+		  
+		<dependency>
+			<groupId>org.jboss.aop</groupId>
+			<artifactId>jboss-aop-aspects</artifactId>
+			<version>2.0.0.CR14</version>
+			<scope>runtime</scope>
 		</dependency>
 		
 		<dependency>
