removing unecesseray jars from libs
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2367 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -125,14 +125,14 @@
 			<groupId>jboss</groupId>
 			<artifactId>jbosssx</artifactId>
 			<version>${jboss.version}</version>
-			<scope>runtime</scope>
+			<scope>provided</scope>
 		</dependency>
 		  
 		<dependency>
 			<groupId>org.jboss.aop</groupId>
 			<artifactId>jboss-aop-aspects</artifactId>
 			<version>2.0.0.CR14</version>
-			<scope>runtime</scope>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
