--- a/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/logging.properties
@@ -9,8 +9,8 @@ handlers = org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
 
 org.apache.juli.FileHandler.level = FINEST
-org.apache.juli.FileHandler.directory = logs
 org.apache.juli.FileHandler.prefix = testsuite.
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
 java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
