--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -34,6 +34,7 @@
 		<module>handler-sip-servlet</module>
 		<module>dispatcher-sip-servlet</module>				
 		<module>update-sip-servlet</module>
+		<module>refer-sip-servlet</module>
 		<module>publish-sip-servlet</module>
 	</modules>
 	<dependencies>
