--- a/sip-servlets-bootstrap/pom.xml
+++ b/sip-servlets-bootstrap/pom.xml
@@ -179,6 +179,12 @@
 				<module>../sip-servlets-test-suite</module>
 			</modules>
 		</profile>
+		<profile>			
+			<id>clustering</id>
+			<properties>
+				<jain-sip-ri.version>1.2.75</jain-sip-ri.version>
+			</properties>
+		</profile>
 	</profiles>
 	<!-- repositories -->
 	<repositories>
