Forgot to Commit the simple sip servlet distributable example to run the clustering test
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2458 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -25,6 +25,7 @@
 		<module>media-playback-servlet</module>
 		<module>shopping-demo</module>
 		<module>simple-sip-servlet</module>
+		<module>simple-sip-servlet-distributable</module>
 		<module>speed-dial</module>
 		<module>uac-register</module>
 	</modules>
