Copy MSS jars and dependencies to $JBOSS_HOME/server/${node}/deploy/jboss-web.deployer/ instead of $JBOSS_HOME/server/default/lib/
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2462 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-application-router/pom.xml
+++ b/sip-servlets-application-router/pom.xml
@@ -106,7 +106,7 @@
 									<tasks>
 										<copy verbose="true"
 											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${env.JBOSS_HOME}/server/default/lib" />
+											todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -164,7 +164,7 @@
 									<tasks>
 										<copy verbose="true"
 											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-											todir="${JBOSS_HOME}/server/default/lib" />
+											todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/" />
 									</tasks>
 								</configuration>
 								<goals>
