--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -150,19 +150,19 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA2</version>
+			<version>1.0.0.BETA3-SNAPSHOT</version>
 			<scope>provided</scope>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.BETA2</version>
+			<version>1.0.0.BETA3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.BETA2</version>
+			<version>1.0.0.BETA3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
